--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,25 @@
+amqp==2.5.2
+asgiref==3.2.3
 autopep8==1.5
+billiard==3.6.3.0
+celery==4.4.0
 Django==3.0.3
 django-bootstrap-form==3.4
+django-celery-results==1.2.0
+djangorestframework==3.11.0
+html5lib==1.0.1
+importlib-metadata==1.5.0
+kombu==4.6.7
+Pillow==7.0.0
+pycodestyle==2.5.0
+PyPDF2==1.26.0
 pytz==2019.3
+redis==3.4.1
+reportlab==3.5.34
+six==1.14.0
+sqlparse==0.3.0
+vine==1.3.0
+webencodings==0.5.1
+xhtml2pdf==0.2.4
+xlwt==1.3.0
+zipp==3.0.0
